# aoc-template

./: .gitignore  Cargo.toml  justfile  requirements.txt  start_solve.py  tasks.py
benchmark/: Cargo.toml
benchmark/benches/: benchmark.rs  criterion.rs  iai.rs
